# macro_econ

./: .env.example  .gitignore  README.md  pyproject.toml
data/: cpi_database.sqlite  cpi_hierarchy.csv  cpi_metadata.json  cpi_weights_long.csv
data/CPI/: bls_api_series.csv  build_cpi_database.py  cpi_database.pkl
data/GDP:GDI/: gdi_hierarchy.tsv  gdp_gdi_combined.tsv  gdp_gdi_hierarchy_bea.py  gdp_hierarchy.tsv
data/PCE/: pce_hierarchy.tsv  pce_hierarchy_bea.py
data/Payrolls/: bls_ces_payrolls_hierarchy.csv  bls_ces_payrolls_hierarchy_comma_safe.csv  build_ces_reference.py
notebooks/: 00_viewer.ipynb  01_overview.ipynb  02_pce.ipynb  03_gdp.ipynb  04_cpi.ipynb  05_employment.ipynb
src/macro_econ/: __init__.py  config.py
src/macro_econ/cache/: __init__.py  store.py
src/macro_econ/clients/: __init__.py  base.py  bea.py  bls.py  fred.py
src/macro_econ/series/: __init__.py  cpi.py  employment.py  gdp.py  loaders.py  node.py  pce.py
src/macro_econ/transforms/: __init__.py  changes.py  levels.py  seasonal.py  smoothing.py  statistics.py
src/macro_econ/viz/: __init__.py  charts.py  styles.py  viewer.py  widgets.py
tests/: conftest.py  test_cache.py  test_node.py  test_transforms.py
